--- a/packages/playground/feature/index.html
+++ b/packages/playground/feature/index.html
@@ -6,7 +6,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"><!--app-html--></div>
+    <div id="app"><!--ssr-outlet--></div>
     <script type="module" src="/src/entry-client.jsx"></script>
   </body>
 </html>
