--- a/packages/playground/feature/index.html
+++ b/packages/playground/feature/index.html
@@ -6,7 +6,7 @@
     <title>Vifr App</title>
   </head>
   <body>
-  <div id="app"><div>222</div><!--ssr-outlet--></div>
+  <div id="app"><!--ssr-outlet--></div>
     <script type="module" src="/src/entry-client.jsx"></script>
   </body>
 </html>
